# sureflap_gcloud

./: .gcloudignore  .gitignore  LICENSE  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  sureflap_gcloud_cli.py
.github/: dependabot.yml
.github/workflows/: deploy.yaml
scripts/: _common_init.sh  _generate_requirements.sh  _piptools_to_uv.sh  _uv_to_piptools.sh  deploy.sh  generate_requirements.sh  uv-sync.sh  uv_upgrade.sh
sureflap_gcloud/: __init__.py
sureflap_gcloud/tests/: test_time.py
