[tool.poetry]
name = "sureflap_gcloud"
version = "0.1.0"
description = ""
authors = ["John Carter <john@therefromhere.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
astral = "^2.2"
pytz = "^2023.3.post1"
surepy = "^0.9.0a"
asyncio = "^3.4.3"
Flask = "^2.2.2"
google-cloud-logging = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = ">=7.1.3"
pytest-freezegun = ">=0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
