[tool.poetry]
name = "sureflap_gcloud"
version = "0.1.0"
description = ""
authors = ["John Carter <john@therefromhere.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
astral = ">=3.2"
pytz = ">=2024.1"
surepy = {url = "https://github.com/therefromhere/surepy/archive/refs/heads/dst_bug_workaround.zip"}
asyncio = "^3.4.3"
Flask = "^3.0.2"
google-cloud-logging = "^3.9.0"
functions-framework = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = ">=7.1.3"
pytest-freezegun = ">=0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
