[project]
name = "sureflap_gcloud"
version = "0.1.0"
description = "A Google Cloud function to talk to the SureFlap cat flap API using benleb's surepy python library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astral>=3.2",
    "asyncio>=3.4.3",
    "flask>=3.0.3",
    "functions-framework>=3.8.1",
    "google-cloud-logging>=3.11.2",
    "pytz>=2024.2",
    "setuptools>=75.1.0",
    "surepy",
]

[tool.uv.sources]
surepy = { url = "https://github.com/therefromhere/surepy/archive/refs/heads/dst_bug_workaround.zip" }

[tool.pytest.ini_options]
pythonpath = "."

[tool.uv]
dev-dependencies = [
    "pytest>8",
    "pytest-freezegun>=0.4.2",
]

# Note - scripts/_piptools_to_uv.sh will append here, it assumes tool.uv is the last section
